// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors should not overwrite when config[0].stats.colors is not null 1`] = `
Array [
  Object {
    "stats": Object {
      "colors": "foo",
    },
  },
]
`;

exports[`colors should pass the value when config[0].stats is a string 1`] = `
Array [
  Object {
    "stats": "foo",
  },
]
`;

exports[`colors should set default color as true when config[0].stats is an object 1`] = `
Array [
  Object {
    "stats": Object {
      "colors": true,
      "foo": "bar",
    },
  },
]
`;

exports[`colors should set default color as true when config[0].stats is null 1`] = `
Array [
  Object {
    "stats": Object {
      "colors": true,
    },
  },
]
`;
